theme: styling and layout

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- Theme Name:   Koda Theme
+ Theme Name:   Koda Theme - Boost My Wireless
  Theme URI:    http://shielamorfe.com
  Description:  Custom Theme
  Author:       Shiela Morfe
