--- a/styles/scss/main-style.scss
+++ b/styles/scss/main-style.scss
@@ -12,7 +12,10 @@
 	"elements/_navigation",
 	"elements/_typographic",
 	"elements/_header",
+	"elements/_footer",
 	"elements/_global",
+
+	"pages/homepage",
 
 	"queries/_1200-1799",
 	"queries/_980-1199",
