--- a/styles/scss/queries/_640-767.scss
+++ b/styles/scss/queries/_640-767.scss
@@ -1,3 +1,15 @@
 @media #{$below-tablet} {
+    .site-footer {
 
+        .info-column, .footer-logo-column {
+            @include columns-class(12);
+            text-align: center !important;
+
+        }
+
+        .footer-logo-column {
+            margin-bottom: 30px;
+            margin-top: 30px;
+        }
+    }
 }
